# pymoney

./: .pre-commit-config.yaml  money.ipynb  pyproject.toml  readme.md
api/: app.py  main.py  pyproject.toml  readme.md
api/app/: dbwrapper  models
api/app/constants/: db.py
api/app/helpers/: dbsession.py
api/app/models/: data_pipeline_models
api/app/routes/: all_transactions.py  health_check.py  summary.py
api/scripts/: responseTime.sh
app/: main.py
app/helpers/: hash.py  readCsv.py  sqlEngine.py
app/models/: Account.py  Load.py  Transaction.py
data-pipeline/: explore.ipynb  load.ipynb  money.ipynb  pyproject.toml
data-pipeline/app/: __init__.py  main.py
data-pipeline/app/constants/: __init__.py  db.py
data-pipeline/app/crud/delete/: truncate_all.py
data-pipeline/app/crud/read/: select_accounts_df.py  select_final_transactions.py  select_unique_staged_transactions.py  select_unique_staged_transactions_df.py
data-pipeline/app/etl/: full_load_from_csv.py
data-pipeline/app/helpers/: __init__.py  query_to_df.py  rawQuery.py  readCsv.py
data-pipeline/app/models/: Account.py  Load.py  Transaction.py
data-pipeline/scripts/: encrypt.py
dbwrapper/: .gitignore  explore.ipynb  load.ipynb  pyproject.toml  readme.md
dbwrapper/dbwrapper/: __init__.py  main.py
dbwrapper/dbwrapper/constants/: __init__.py  db.py
dbwrapper/dbwrapper/crud/create/: insert_query_into_table.py
dbwrapper/dbwrapper/crud/read/: __init__.py  select_final_transactions.py  select_summary_df.py  select_unique_staged_transactions.py
dbwrapper/dbwrapper/etl/: full_load_from_csv.py
dbwrapper/dbwrapper/helpers/: __init__.py  dates.py  query_to_df.py  rawQuery.py  readCsv.py  seed.py  sqlEngine.py  summarize.py
dbwrapper/dbwrapper/models/: Account.py  Load.py  Transaction.py  __init__.py
dbwrapper/scripts/: s3pull.sh  s3push.sh  seed.py
dbwrapper/tests/constants/: mockDb.py
dbwrapper/tests/crud/: test_0_helpers.py  test_1_create_and_seed.py  test_1_etlpipeline.py  test_2_etlpipeline.py  test_create_db.py  test_create_tables.py
dbwrapper/tests/crud/__snapshots__/: test_0_helpers.ambr  test_1_etlpipeline.ambr  (+1 more)
dbwrapper/tests/helpers/: __init__.py  mockSqlEngine.py
scripts/: run_tests.sh  s3pull.sh  s3push.sh  sanitize_notebook.py  seed.py
(+5 files in other folders)
