[tool.poetry]
name = "pymoney"
version = "0.1.0"
description = "A Python-based money management and forecasting tool."
authors = ["Andrew Samaha <andrew.samaha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
pre-commit = "^3.2.2"
data-pipeline = { path = "data-pipeline" }
api = { path = "api" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
