[tool.poetry]
name = "api"
version = "0.1.0"
description = "Python back-end to perform CRUD operations"
authors = ["Andrew Samaha <andrew.samaha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
