[tool.poetry]
name = "pymoney"
version = "0.1.0"
description = "A Python-based money management and forecasting tool."
authors = ["Andrew Samaha <andrew.samaha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
SQLAlchemy = "^2.0.10"
setuptools = "^59.6.0"
cryptography = "^40.0.2"
path = "^16.6.0"
pre-commit = "^3.2.2"

[tool.poetry.scripts]
testscript = "./scripts/testscript.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
